Meta tags via Helmet

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <!-- Timely Button Script -->
+    <script
+      id="timelyScript"
+      src="https://book.gettimely.com/widget/book-button-v1.5.js"
+    ></script>
+    <!-- End Timely BUtton Script -->
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -41,7 +48,9 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
