--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Professional barbering services in West End, Brisbane. Book your appointment online for quality haircuts, styling, and grooming services." />
     <title>Faded Az</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
