--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <!-- Timely Button Script -->
-    <script
-      id="timelyScript"
-      src="https://book.gettimely.com/widget/book-button-v1.5.js"
-    ></script>
-    <!-- End Timely BUtton Script -->
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Koulen&family=Special+Elite&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Koulen&family=Special+Elite&display=swap"></noscript>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -31,12 +28,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Professional barbering services in West End, Brisbane. Book your appointment online for quality haircuts, styling, and grooming services." />
     <title>Faded Az</title>
+    
+    <!-- Critical CSS inlined for faster rendering -->
+    <style>
+      :root{font-family:Inter,system-ui,Avenir,Helvetica,Arial,sans-serif;line-height:1.5;font-weight:400;color-scheme:light dark;color:rgba(255,255,255,.87);background-color:#242424;font-synthesis:none;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}body{margin:0;display:flex;place-items:center;min-width:320px;min-height:100vh}#root{display:flex;place-items:center;min-height:100vh;width:100%}button{border-radius:8px;border:1px solid transparent;padding:.6em 1.2em;font-size:1em;font-weight:500;font-family:inherit;background-color:#1a1a1a;cursor:pointer;transition:border-color .25s}a{font-weight:500;color:#646cff;text-decoration:inherit}h1{font-size:3.2em;line-height:1.1}
+    </style>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Koulen&family=Special+Elite&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
